[Fix, Update]([0]ChannelDetails/styles, [1]changeChannelTopic, [2]index): [0] aligned bottom border, [1] included cases when updating topic via channel details pane, [2] removed redux dev tools for e2e tests

--- a/src/components/ChannelDetails/styles.scss
+++ b/src/components/ChannelDetails/styles.scss
@@ -8,7 +8,7 @@
     display: flex;
     height: 55px;
     justify-content: space-between;
-    padding: 0 1rem;
+    padding: 1.78rem 1rem;
   }
 
   &__inside,
